# bergson

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  run_debug_experiments.sh
.github/workflows/: build.yml  unit_tests.yml
bergson/: __init__.py  __main__.py  attribute_results.ipynb  attributor.py  build.py  collection.py  config.py  data.py  distributed.py  dynamic_query.py  faiss_index.py  gradients.py  huggingface.py  launch.py  placeholder.py  processing.py  query.py  query_callback.py  query_existing.py  query_writer.py  reduce.py  scan.py  score_writer.py  scorer.py  static_query.py  utils.py  worker_utils.py
bergson/approx_unrolling/: developing.ipynb  pile_data.py
bergson/cli/: auto_batch_size.py
bergson/collector/: collector.py  dist_preconditioners_gradient_collector.py  gradient_collectors.py  multi_node_gradient_collector.py
bergson/hessians/: README.md  __main__.py  attribute.py  collector.py  compute_EKFAC.py  compute_all.py  covariance_all_factors.py  covariance_computation.py  data_filtering.ipynb  data_filtering_ekfac.ipynb  debug_comparison.sh  developing.ipynb  ekfac_apply.py  ekfac_apply.sh  ekfac_compute.py  ekfac_transform.sh  example_ekfac.sh  gradient_covariance_closure.py  gradient_covariance_sharded.py  logger.py  misaligned_datasets.ipynb  query.sh  query_random_and_default.sh  run_all.sh  sharded_computation.py  testing_ekfac.sh  testing_simple.sh  training_test.py  utils.py
bergson/query/: attributor.py  faiss_index.py  query_index.py
bergson/score/: score.py  score_writer.py  scorer.py
bergson/utils/: auto_batch_size.py  utils.py  (+1 more)
docs/: api.rst  cli.rst  conf.py  index.rst
examples/: analyze_query.py  assemble_query.py  filter_data.py  find_induction_heads.py  kronfluence_benchmark.py  mini_fd.py  mini_grad_cache.py  owl.py  query_analysis.py  query_index.py  setup_ds.py  sft_with_gradients.py  trainer_grad_collection.py  warmup.sh
runs/: test_build_cache.npy
tests/: conftest.py  test_attributor.py  test_batch_size_invariance.py  test_build.py  test_data.py  test_gradients.py  test_normalizer.py  test_peft.py  test_query.py  test_reduce.py  test_score.py  test_trainer_callback.py
(+30 files in other folders)
